plang/testing/logs/false-incorrect/106/program106.p.p
e aDnMr boM :- (x9Lj tk yToX (pJE (CCuS) fbqC); y), (leB4e (jIg2K (i XQQ4) (JP5V))), (wi (k te k) DR); (r mV6 i2Z qJZ), sM1 ufzs T (KNUs), vbXm OUe X (VSw), q Xn (ddES (va) (g tj1t iX22 (s4 (w)) dY)) (h) (Hpfg); liE eI9 my, cpx; kFcxF lb lvS2v (QM7).
qTUQ (el (H4mEr) ZTG) (XTe) (kw).
xxEsB (Xn) U (fP (K)).


? ((h2w (im Tx (PBa) iN (Usb)) (dB (q wIPzv (oMPIa i (lNfW) G kO2K)) (aL7b (N4) (XtcRJ))) arA3 L, sxY (c7 (u) mU7); t (GuPmC) (CV5), fYOei)).


